--- a/assets/scss/_page-header.scss
+++ b/assets/scss/_page-header.scss
@@ -15,7 +15,7 @@
     margin: 0;
     text-transform: uppercase;
 
-    @media (min-width: 768px) {
+    @media (min-width: $breakpoint-md + 1) {
       font-size: 3rem;
     }
   }
