--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -54,11 +54,12 @@ $spacing-2xl: 3rem; // 48px
 $spacing-3xl: 4rem; // 64px
 $spacing-4xl: 6rem; // 96px
 
-// Breakpoints
-$breakpoint-sm: 480px;
-$breakpoint-md: 768px;
-$breakpoint-lg: 992px;
-$breakpoint-xl: 1200px;
+// Breakpoints (aligned with Webflow export)
+$breakpoint-sm: 479px; // Webflow: max-width: 479px (mobile portrait)
+$breakpoint-md: 767px; // Webflow: max-width: 767px (mobile landscape)
+$breakpoint-lg: 991px; // Webflow: max-width: 991px (tablet)
+$breakpoint-xl: 1280px; // Webflow: min-width: 1280px (large desktop)
+$breakpoint-2xl: 1920px; // Webflow: min-width: 1920px (ultra-wide)
 
 // Container
 $container-max-width: 1280px;
